# devLog

./: .gitattributes  LICENSE  MANIFEST.in  Pop_up.py  README.md  application.py  autoencoder_souce_code.ipynb  autoencoder_v7.pth  finish_popup.py  pyproject.toml  requirements.txt  setup.py
requirements/: core.txt
